syntax = "proto3";
option go_package = ".;book";

service BookService {
  rpc CreateBook(Book) returns (BookResponce);
  rpc GetBook(BookID) returns (Book);
  rpc UpdateBook(Book) returns (BookResponce);
  rpc DeleteBook(BookID) returns (DeleteResponce);
}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string status = 4;
}

message BookID {
  string id = 1;
}

message BookResponce {
  string id = 1;
}

message DeleteResponce {
  bool success = 1;
}
